# Overlay-win32

./: .gitignore  CMakeLists.txt  vcpkg.json
resources/: app.rc
resources/macos/: Info.plist
src/: app.cpp  app.h  main.cpp  menu_button.cpp  menu_button.h  message_handler.cpp  message_handler.h  overlay_window.cpp  overlay_window.h  renderer.cpp  renderer.h  subtitle_manager.cpp  subtitle_manager.h  test_input.cpp  test_input.h  ws_client.cpp  ws_client.h
src/common/: app_callbacks.h  message_handler.cpp  message_handler.h  subtitle_manager.cpp  subtitle_manager.h  types.h
src/platform/macos/: app.h  app.mm  main.mm  menu_button.h  menu_button.mm  overlay_window.h  overlay_window.mm  renderer.h  renderer.mm  ws_client.cpp
src/platform/win32/: app.cpp  app.h  menu_button.cpp  menu_button.h  overlay_window.cpp  overlay_window.h  renderer.cpp  renderer.h  test_input.cpp  test_input.h  ws_client.cpp  ws_client.h
